--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@ Kikuchi
       BV.init();
   
       if (Modernizr.touch) {
-          BV.show('../image/gagaga.jpg');//タッチデバイスでの画像を指定
+          BV.show('../hitori.jpg');//タッチデバイスでの画像を指定
       } else {
-          BV.show('../『夜は短し歩けよ乙女』 90秒予告.mp4',{ambient:true});
+          BV.show('../shutterstock_v17340577.mp4',{ambient:true});
       }
   });
 </script>
